Fixed commit message in forks list not truncating

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -612,7 +612,8 @@ pre.light-well {
   .project-details {
     min-width: 0;
 
-    p {
+    p,
+    .commit-row-message {
       @include str-truncated(100%);
       margin-bottom: 0;
     }
